Task 5 (#5)
* Edit gitignore, add checkstyle.xml and another unversioned files

* Added spring dependency injections