@@ -1,20 +1,21 @@
-package pl.futurecollars.invoicing.utils;
+package pl.futurecollars.invoicing.service;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.List;
+import org.springframework.stereotype.Service;
 
+@Service
 public class FileService {
 
   public void appendLineToFile(Path path, String line) throws IOException {
-    Files.write(path, (line + System.lineSeparator()).getBytes(StandardCharsets.UTF_8), StandardOpenOption.APPEND);
+    Files.writeString(path, line + System.lineSeparator(), StandardOpenOption.APPEND);
   }
 
   public void writeToFile(Path path, String line) throws IOException {
-    Files.write(path, line.getBytes(StandardCharsets.UTF_8), StandardOpenOption.TRUNCATE_EXISTING);
+    Files.writeString(path, line, StandardOpenOption.TRUNCATE_EXISTING);
   }
 
   public void writeLinesToFile(Path path, List<String> lines) throws IOException {
